--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.16.1
   provider: ^4.3.2+3
   dio: ^3.0.10
   material_floating_search_bar: ^0.2.6
+  fluttertoast: ^7.1.8
 #bloc
   bloc: ^6.1.1
   flutter_bloc: ^6.1.1
@@ -48,13 +52,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+
+  assets:
+    - lang/en.json
+    - lang/pl.json
+
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -64,6 +72,18 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
+
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/montserrat_regular.ttf
+          weight: 400
+        - asset: assets/fonts/montserrat_medium.ttf
+          weight: 500
+        - asset: assets/fonts/montserrat_semibold.ttf
+          weight: 600
+        - asset: assets/fonts/montserrat_bold.ttf
+          weight: 700
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
