--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dartz: ^0.9.2
   provider: ^4.3.2+3
   dio: ^3.0.10
+  geolocator: ^6.2.1
   material_floating_search_bar: ^0.2.6
   fluttertoast: ^7.1.8
   flutter_launcher_icons: ^0.8.1
